--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,8 +1,8 @@
 <div class="card">
   <div class="card-text">
-
+    <span>Sample Text</span>
   </div>
   <div class="card-footer">
-
+    {{ brandText }}
   </div>
 </div>
