--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,2 +1,9 @@
-<p>index works!</p>
-<app-card></app-card>
+<div class="splash">
+  <div class="d-flex flex-row mb-3">
+    <app-card [className]="'mx-2'"></app-card>
+    <app-card [className]="'mx-2'"></app-card>
+  </div>
+  <div class="d-flex flex-row">
+    <app-card [className]="'mx-2'" (click)="createRoute()"></app-card>
+  </div>
+</div>
