--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,24 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
 
-
 $mediaMaxWidth: 1500px;
 
-@media only screen and (-webkit-device-pixel-ratio: 2),(min-resolution: 192dpi) {
-  #root {
-    width: 100%;
-  }
-}
+//@media only screen and (-webkit-device-pixel-ratio: 2) and (min-resolution: 192dpi) {
+//
+//}
 
-html, body {
-  display: flex;
+html,
+body {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
   margin: 0;
-  justify-content: center;
+}
+
+*,
+::before,
+::after {
+  box-sizing: border-box;
 }
 
 #root {
-  display: flex;
   width: 100%;
+  padding: 5px 10px;
   @media screen and (min-width: $mediaMaxWidth) {
     width: $mediaMaxWidth;
   }
@@ -28,4 +30,24 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.flex-row {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  flex-direction: row !important;
+}
+
+.mx-2 {
+  margin: 0 0.25rem;
+}
+
+.mb-3 {
+  margin-bottom: 1rem;
 }
