--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-text">
-    <span>Sample Text</span>
+    <ng-content></ng-content>
   </div>
   <div class="card-footer">
     {{ brandText }}
