--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,6 +1,6 @@
 <div class="splash">
   <div class="d-flex flex-row mb-3">
-    <app-card [className]="'mx-2'"></app-card>
+    <app-card [className]="'mx-2'">I would like to ______</app-card>
     <app-card [className]="'mx-2'"></app-card>
   </div>
   <div class="d-flex flex-row">
