--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,10 +20,12 @@ body {
 
 #root {
   width: 100%;
-  padding: 5px 10px;
+  padding: 0 10px;
   @media screen and (min-width: $mediaMaxWidth) {
     width: $mediaMaxWidth;
   }
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .splash {
