--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,8 +1,9 @@
-<div class="card">
-  <div class="card-text">
+<div class="card" [ngClass]="black ? 'black' : ''">
+  <div class="card-text" *ngIf="!flipped">
     <ng-content></ng-content>
   </div>
-  <div class="card-footer">
+  <div *ngIf="flipped" class="card-back">{{ brandText }}</div>
+  <div class="card-footer" *ngIf="!flipped">
     {{ brandText }}
   </div>
 </div>
