--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -22,3 +22,13 @@
   font-size: 0.6rem;
   font-weight: bold;
 }
+
+.card-back {
+  font-weight: bold;
+  font-size: 1.7rem;
+}
+
+.black {
+  background-color: #000;
+  color: #fff;
+}
