--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -5,5 +5,6 @@
   <div *ngIf="flipped" class="card-back">{{ brandText }}</div>
   <div class="card-footer" *ngIf="!flipped">
     {{ brandText }}
+    test
   </div>
 </div>
