--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -1,7 +1,7 @@
 .card {
   height: 31vh;
   width: 21vh;
-  padding: 8px;
+  padding: 15px 8px;
   border: 1px solid #999;
   border-radius: 0.25rem;
   display: flex;
@@ -31,4 +31,10 @@
 .black {
   background-color: #000;
   color: #fff;
+  border: 1px solid #000;
+}
+
+.white {
+  background-color: #fff;
+  color: #000000;
 }
