--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -1,7 +1,7 @@
 .card {
   height: 31vh;
   width: 21vh;
-  padding: 15px 8px;
+  padding: 0.5rem;
   border: 1px solid #999;
   border-radius: 0.25rem;
   display: flex;
