--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,3 +54,12 @@ body {
 .mb-3 {
   margin-bottom: 1rem;
 }
+
+.card-input {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  width: 100%;
+  font-weight: bold;
+  font-size: 1rem;
+}
